--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,7 +14,7 @@
       aria-haspopup="true"
       aria-expanded="false"
       >
-      Menu
+      <span class="unbounded-cat-text">Menu</span>
       <%= image_tag "menu-icon.svg", alt: "Menu", class: "menu-icon" %>
     </button>
     <div
