--- a/app/assets/stylesheets/add-new-post.css
+++ b/app/assets/stylesheets/add-new-post.css
@@ -3,7 +3,7 @@
   display: flex;
   width: 100%;
   height: 100%;
-  box-shadow: 0px 0px 100px var(--Green-Glow);
+  box-shadow: 0px 10px 100px -40px var(--Green-Glow);
   border-radius: 8px;
   overflow: hidden;
   border: 1px solid #363636;
@@ -36,7 +36,7 @@
 .add-post-form__attributes {
   flex: 1 1 0;
   padding: 10px 20px;
-  background: linear-gradient(360deg, #000000 0%, #121212 100%);
+  background: linear-gradient(0deg, #000 0%, #121212 33.81%);
   outline: 1px solid #363636;
   display: flex;
   flex-direction: column;
