--- a/app/assets/stylesheets/posts.css
+++ b/app/assets/stylesheets/posts.css
@@ -76,10 +76,10 @@
 .category-text {
   color: var(--White, #FFF);
   text-align: center;
-  font-family: Unbounded;
+  font-family: B612 Mono;
   font-size: 12px;
   font-style: normal;
-  font-weight: 250;
+  font-weight: 400;
   line-height: normal;
 }
 
