--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,6 +18,7 @@
  *= require footer
  *= require post-management
  *= require pagy
+ *= require login
  */
 :root {
   --Gray: #363636;
@@ -32,6 +33,7 @@
   --Electro-Red-Gradient: linear-gradient(0deg, rgba(244, 32, 83, 0.5) 0%, rgba(244, 32, 83) 100%);
   --Gray-Gradient: linear-gradient(0deg, rgba(123, 123, 123, 0.5) 0%, rgb(147, 147, 147) 100%);
   --Green-Glow: rgba(13, 174, 94, 1);
+  --Box-Shadow-Green-Glow: 0px 10px 100px -40px var(--Green-Glow);
 
   --Electro-Red-RGB: 244, 32, 83;      /* #F42053 */
   --Electro-Blue-RGB: 48, 194, 246;    /* #30C2F6 */
