--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,19 @@
-<h2>Forgot your password?</h2>
+<div class="password-reset-page">
+  <div class="password-reset-container">
+    <h2 class="password-reset-header">Yes, I forgot my password..</h2>
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { class: "password-reset-form", method: :post }) do |f| %>
+      <div class="password-reset-field">
+        <%= f.label :email, class: "password-reset-label" %>
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "password-reset-input" %>
+      </div>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+      <div>
+        <%= f.submit "Send Reset Link", class: "password-reset-button" %>
+      </div>
+    <% end %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <div class="password-reset-links">
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
