--- a/app/assets/stylesheets/footer.css
+++ b/app/assets/stylesheets/footer.css
@@ -179,7 +179,7 @@
 
 .about-dialog__github {
   width: 100%;
-  padding: 8px 0;
+  padding-bottom: 8px;
   border-bottom: 1px solid #0dae5e;
 }
 
@@ -221,7 +221,7 @@
 .footer-contact-dialog {
   width: 100%;
   max-width: 360px;
-  background: radial-gradient(100% 100% at center, black 0%, #121212 100%);
+  background: radial-gradient(62.86% 62.86% at 50% 0%, #000 0%, #121212 100%);
   box-shadow: 0px 10px 100px -40px var(--Green-Glow);
   border-radius: 12px;
   border: 1px var(--Gray) solid;
