Add 500 test trigger (REMOVE)

--- a/app/views/errors/internal_server_error.html.erb
+++ b/app/views/errors/internal_server_error.html.erb
@@ -1,6 +1,6 @@
 <div class="error-wrapper">
   <div class="error-icon-container">
-    <%= image_tag "server-down.svg", alt: "Internal Server Error", class: "error-icon-background" %>
+    <%= image_tag "server-icon.svg", alt: "Internal Server Error", class: "error-icon-background" %>
   </div>
   <div class="error-content">
     <div class="error-title">500</div>
