--- a/app/assets/stylesheets/post-show.css
+++ b/app/assets/stylesheets/post-show.css
@@ -250,9 +250,10 @@
 .post-content thead th {
   background: rgba(255, 255, 255, 0.1);
   color: #FFF;
-  font-size: 14px;
-  font-family: 'Unbounded', sans-serif;
-  font-weight: 400;
+  font-size: 16px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 500;
+  letter-spacing: 0.5px;
   text-align: left;
   padding: 10px 12px;
   border-left: 1px solid var(--Gray, #363636);
