--- a/app/assets/stylesheets/post-code-blocks.css
+++ b/app/assets/stylesheets/post-code-blocks.css
@@ -50,6 +50,10 @@
 }
 
 .copy-button {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  height: 28px;
   background: var(--Electro-Forest-Green);
   color: white;
   font-size: 0.8rem;
@@ -59,7 +63,7 @@
   font-size: 0.7rem;
   border-radius: 3px;
   cursor: pointer;
-  margin-right: 5px;
+  /* margin-right: 5px; */
   transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
