Add a neat lil' transform to logo.. neat!

--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -9,6 +9,11 @@
 
 .navbar-logo img {
   height: 80px;
+  transition: transform 0.4s ease;
+}
+
+.navbar-logo img:hover{
+  transform: translateY(2px);
 }
 
 .dropdown-container {
