--- a/app/assets/stylesheets/post-show.css
+++ b/app/assets/stylesheets/post-show.css
@@ -1,7 +1,7 @@
 .post-container {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
   gap: 32px;
   width: 100%;
@@ -12,7 +12,7 @@
 
 .post-content {
   display: flex;
-  padding: 0.8rem;
+  padding: 3rem;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
@@ -33,7 +33,7 @@
   font-family: Unbounded;
   font-size: 36px;
   font-style: normal;
-  font-weight: 700;
+  font-weight: 500;
   line-height: normal;
   margin: 0;
 }
@@ -138,7 +138,8 @@
 .post-content h4,
 .post-content h5,
 .post-content h6 {
-  font-family: 'Unbounded', sans-serif;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
   margin: 15px 0;
 }
 
@@ -227,7 +228,7 @@
 .post-content hr {
   border: none;
   width: 100%;
-  height: 2px;
+  height: 1px;
   background: var(--Electro-Forest-Green);
   margin: 20px 0;
 }
@@ -299,3 +300,8 @@
   border-left: none;
 }
 
+@media (max-width: 800px) {
+  .post-content {
+    padding: 0.8rem;
+  }
+}
