--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<section class="posts-container">
+<section class="post-container">
   <p class="post-date"><%= formatted_post_date(@post) %></p>
   <h1 class="post-title"><%= @post.title %></h1>
   <div class="categories">
